--- a/index.html
+++ b/index.html
@@ -1,93 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
 <link>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Nova Capital</title>
 
-    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-functions.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-functions.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link href="https://nightly.datatables.net/css/dataTables.bootstrap4.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="css/style.css"/>
+<link href="https://nightly.datatables.net/css/dataTables.bootstrap4.css" rel="stylesheet" type="text/css"/>
 
 
 </head>
 
 <body>
 
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-     Collapse button
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-            aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    Collapsible content
-    <div class="collapse navbar-collapse" id="basicExampleNav">
-        Links
-        <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-                <a class="nav-link logged-out"  style="display: none" href="#homeView"  id="homeNav">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link logged-in" style="display: none"  href="#">Create Guide</a>
-            </li>
-            <li class="nav-item  ml-auto">
-                <a class="nav-link logged-out"  style="display: none" href="#loginForm" id="login-userNav">Login</a>
-            </li>
-            <li class="nav-item ml-auto">
-                <a class="nav-link logged-out" style="display: none"  href="#registerForm" id="registerNav">Register</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link logged-in" href="#" style="display: none"  id="logout-user">Sign out</a>
-            </li>
-        </ul>
-
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link logged-in" href="#"  id="userInfo"></a>
-            </li>
-        </ul>
-    </div>
-</nav> -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Nova Capital</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
-                <a class="nav-link logged-out"  style="display: none" href="#homeView"  id="homeNav">Home</a>
+                <a class="nav-link logged-out" style="display: none" href="#homeView" id="homeNav">Home</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link logged-out"  style="display: none" href="#aboutView"  id="aboutNav">About</a>
+                <a class="nav-link logged-out" style="display: none" href="#aboutView" id="aboutNav">About</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link logged-out"  style="display: none" href="#contactsView"  id="contactsNav">Contacts</a>
+                <a class="nav-link logged-out" style="display: none" href="#contactsView" id="contactsNav">Contacts</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link logged-in" style="display: none"  href="#"></a>
+                <a class="nav-link logged-in" style="display: none" href="#"></a>
             </li>
         </ul>
         <ul class="navbar-nav pull-right">
             <li class="nav-item active">
-                <a class="nav-link logged-out"  style="display: none" href="#loginForm" id="login-userNav">Login</a>
+                <a class="nav-link logged-out" style="display: none" href="#loginForm" id="login-userNav">Login</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link logged-out" style="display: none"  href="#registerForm" id="registerNav">Register</a>
+                <a class="nav-link logged-out" style="display: none" href="#registerForm" id="registerNav">Register</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link logged-in" href="#"  id="userInfo"></a>
+                <a class="nav-link logged-in" href="#" id="userInfo"></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link logged-in" href="#" style="display: none"  id="logout-user">Sign out</a>
+                <a class="nav-link logged-in" href="#" style="display: none" id="logout-user">Sign out</a>
             </li>
         </ul>
     </div>
@@ -97,7 +62,7 @@
     <h1>Home Page</h1>
 </section>
 
-    <section id="loginForm">
+<section id="loginForm">
     <form class="container col-lg-4 col-sm-8">
         <h2 class="text-center">Login</h2>
         <div class="form-group">
@@ -109,32 +74,32 @@
             <input type="password" class="form-control" id="loginPassword" required>
         </div>
         <div class="col text-center">
-        <button class="btn btn-primary" id="loginButton">Login</button>
-        <p class="error-login" style="color: red"></p>
+            <button class="btn btn-primary" id="loginButton">Login</button>
+            <p class="error-login" style="color: red"></p>
         </div>
     </form>
 </section>
 
 <section id="registerForm">
-<form  class="container col-lg-4 col-sm-8">
-    <h2 class="text-center">Register</h2>
-    <div class="form-group">
-        <label for="registerEmail">Email address</label>
-        <input type="email" class="form-control" id="registerEmail" aria-describedby="emailHelp" required>
-    </div>
-    <div class="form-group">
-        <label for="registerPassword">Password</label>
-        <input type="password" class="form-control" id="registerPassword" required>
-    </div>
-    <div class="form-group">
-        <label for="repeatPassword">Repeat Password</label>
-        <input type="password" class="form-control" id="repeatPassword" required>
-        <p class="error-repeatPassword" style="color: red"></p>
-    </div>
-    <div class="col text-center">
-    <button class="btn btn-primary" id="registerButton">Register</button>
-    </div>
-</form>
+    <form class="container col-lg-4 col-sm-8">
+        <h2 class="text-center">Register</h2>
+        <div class="form-group">
+            <label for="registerEmail">Email address</label>
+            <input type="email" class="form-control" id="registerEmail" aria-describedby="emailHelp" required>
+        </div>
+        <div class="form-group">
+            <label for="registerPassword">Password</label>
+            <input type="password" class="form-control" id="registerPassword" required>
+        </div>
+        <div class="form-group">
+            <label for="repeatPassword">Repeat Password</label>
+            <input type="password" class="form-control" id="repeatPassword" required>
+            <p class="error-repeatPassword" style="color: red"></p>
+        </div>
+        <div class="col text-center">
+            <button class="btn btn-primary" id="registerButton">Register</button>
+        </div>
+    </form>
 </section>
 
 <form id="addGuide" class="container col-lg-4 col-sm-8">
@@ -153,8 +118,8 @@
         <input type="number" class="form-control" id="insuranceNumberData" placeholder="Insurance Number" required/>
     </div>
     <div class="col text-center">
-    <button class="btn btn-dark">Add</button>
-    <p class="error-add-guide" style="color: red"></p>
+        <button class="btn btn-dark">Add</button>
+        <p class="error-add-guide" style="color: red"></p>
     </div>
 </form>
 <br/><br/><br/>
