--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </nav>
 
 <section id="home">
-    <img src="images/header-2.jpg" class="img-fluid" alt="header-image">
+    <img src="images/header.jpg" class="img-fluid" alt="header-image">
     <p id="award-winner">Investment Property Award winner for <strong>2019</strong><span id="arrow"></span></p>
 </section>
 
@@ -130,7 +130,7 @@
         <p class="error-add-guide" style="color: red"></p>
     </div>
 </form>
-<br/><br/><br/>
+
 
 <div class="container logged-in">
     <table class="table table-striped table-bordered ">
