--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
 </nav>
 
 <section id="home">
+    <div class='container-fluid'>
+        <div class="row">
+    <h1 class='text-center'>ELEGANT<p>CITY LIVING</p>
+        <p id='header-text'>AN EXCEPTIONAL DEVELOPMENT OF CONTEMPORARY HOMES LOCATED WITHIN
+            THE DESIRABLE LOCATION OF CENTRAL BIRMINGHAM.</p></h1>
     <img src="images/header.jpg" class="img-fluid" alt="header-image">
     <p id="award-winner">Investment Property Award winner for <strong>2019</strong><span id="arrow"></span></p>
+</div>
+</div>
 </section>
 
 
