--- a/index.html
+++ b/index.html
@@ -1,195 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<link>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nova Capital</title>
+    <link>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nova Capital</title>
 
-<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-functions.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-functions.js"></script>
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
-<link href="https://nightly.datatables.net/css/dataTables.bootstrap4.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <link href="https://nightly.datatables.net/css/dataTables.bootstrap4.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand logged-out" style="display: none" href="#home" id="brand-home">Nova Capital</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand logged-out" style="display: none" href="#home" id="brand-home">Nova Capital</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto">
-            <li class="nav-item active">
-                <a class="nav-link logged-out" style="display: none" href="#home" id="homeNav">Home</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link logged-out" style="display: none" href="#about" id="aboutNav">About</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link logged-out" style="display: none" href="#contacts" id="contactsNav">Contacts</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link logged-in" style="display: none" href="#"></a>
-            </li>
-        </ul>
-        <ul class="navbar-nav pull-right">
-            <li class="nav-item active">
-                <a class="nav-link logged-out" style="display: none" href="#login" id="login-userNav">Login</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link logged-out" style="display: none" href="#register" id="registerNav">Register</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link logged-in" href="#" id="userInfo"></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link logged-in" href="#" style="display: none" id="logout-user">Sign out</a>
-            </li>
-        </ul>
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link logged-out" style="display: none" href="#home" id="homeNav">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link logged-out" style="display: none" href="#about" id="aboutNav">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link logged-out" style="display: none" href="#contacts" id="contactsNav">Contacts</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link logged-in" style="display: none" href="#"></a>
+                </li>
+            </ul>
+            <ul class="navbar-nav pull-right">
+                <li class="nav-item active">
+                    <a class="nav-link logged-out" style="display: none" href="#login" id="login-userNav">Login</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link logged-out" style="display: none" href="#register" id="registerNav">Register</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link logged-in" href="#" id="userInfo"></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link logged-in" href="#" style="display: none" id="logout-user">Sign out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <section id="home">
+        <div class='container-fluid'>
+            <div class="row">
+                <h1 class='text-center'>ELEGANT<p>CITY LIVING</p>
+                    <p id='header-text'>AN EXCEPTIONAL DEVELOPMENT OF CONTEMPORARY HOMES LOCATED WITHIN
+                        THE DESIRABLE LOCATION OF CENTRAL BIRMINGHAM.</p>
+                </h1>
+                <img src="images/header.jpg" class="img-fluid" alt="header-image">
+                <p id="award-winner">Investment Property Award winner for <strong>2019</strong><span id="arrow"></span>
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <div id="welcome-nova-capital">
+        <div class="container-fluid" id='nova-article'>
+            <h1>Discover your new home</h1>
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <img class="img-fluid" src="./images/nova-capital.jpg" alt="nova-capital" />
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <article>
+                        <h2><u>WELCOME TO<br /> NOVA CAPITAL</u></h2>
+                        <h3>London’s new residential icon</h3>
+                        <p>Welcome to The Nova Capital, London’s most awaited new residential tower. The Nova offers
+                            beautiful Canary Wharf apartments with panoramic views of the City.</p>
+                        <h4>Discover the sleek design of these Canary Wharf apartments available to buy in London, E14.
+                            Completion 2020.</h4>
+                    </article>
+                </div>
+            </div>
+        </div>
+
+        <!-- Kitchen Section -->
+
+        <div class="container-fluid" id='kitchen-article'>
+           <div class="row">
+            <div class="col-lg-6 col-md-12">
+                <article>
+                    <h2><u>DESIGNED TO<br/> MAXIMUM IMPACT</u></h2>
+                    <h3>Learn more about Make Architects’ exquisitely designed new build homes</h3>
+                     <p>The Nova offers a variety of luxury Canary Wharf apartments from studios to Penthouses. Find out more about our apartment specifications</p>
+                 </article>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <img class="img-fluid" src="./images/kitchen.jpg" alt="nova-capital-2"/>
+            </div>
+           </div>
+        </div>
     </div>
-</nav>
-
-<section id="home">
-    <div class='container-fluid'>
-        <div class="row">
-    <h1 class='text-center'>ELEGANT<p>CITY LIVING</p>
-        <p id='header-text'>AN EXCEPTIONAL DEVELOPMENT OF CONTEMPORARY HOMES LOCATED WITHIN
-            THE DESIRABLE LOCATION OF CENTRAL BIRMINGHAM.</p></h1>
-    <img src="images/header.jpg" class="img-fluid" alt="header-image">
-    <p id="award-winner">Investment Property Award winner for <strong>2019</strong><span id="arrow"></span></p>
-</div>
-</div>
-</section>
 
 
-<section id="login" style="display: none">
-    <form class="container col-lg-4 col-sm-8">
-        <h2 class="text-center">Login</h2>
+    <section id="login" style="display: none">
+        <form class="container col-lg-4 col-sm-8">
+            <h2 class="text-center">Login</h2>
+            <div class="form-group">
+                <label for="loginEmail">Email address</label>
+                <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp" required>
+            </div>
+            <div class="form-group">
+                <label for="loginPassword">Password</label>
+                <input type="password" class="form-control" id="loginPassword" required>
+            </div>
+            <div class="col text-center">
+                <button class="btn btn-primary" id="loginButton">Login</button>
+                <p class="error-login" style="color: red"></p>
+            </div>
+        </form>
+    </section>
+
+    <section id="about">
+        <h1 class="text-center">About page</h1>
+    </section>
+
+    <section id="contacts">
+        <h1 class="text-center">Contacts page</h1>
+    </section>
+
+    <section id="register" style="display: none">
+        <form class="container col-lg-4 col-sm-8">
+            <h2 class="text-center">Register</h2>
+            <div class="form-group">
+                <label for="registerEmail">Email address</label>
+                <input type="email" class="form-control" id="registerEmail" aria-describedby="emailHelp" required>
+            </div>
+            <div class="form-group">
+                <label for="registerPassword">Password</label>
+                <input type="password" class="form-control" id="registerPassword" required>
+            </div>
+            <div class="form-group">
+                <label for="repeatPassword">Repeat Password</label>
+                <input type="password" class="form-control" id="repeatPassword" required>
+                <p class="error-repeatPassword" style="color: red"></p>
+            </div>
+            <div class="col text-center">
+                <button class="btn btn-primary" id="registerButton">Register</button>
+            </div>
+        </form>
+    </section>
+
+    <form id="addGuide" class="container col-lg-4 col-sm-8" style="display: none">
+        <h2 class="text-center">Create a Guide</h2>
         <div class="form-group">
-            <label for="loginEmail">Email address</label>
-            <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp" required>
+            <label for="firstNameData"></label>
+            <input type="text" class="form-control" id="firstNameData" placeholder="First Name" required />
+
         </div>
         <div class="form-group">
-            <label for="loginPassword">Password</label>
-            <input type="password" class="form-control" id="loginPassword" required>
+            <label for="lastNameData"></label>
+            <input type="text" class="form-control" id="lastNameData" placeholder="Last Name" required />
+        </div>
+        <div class="form-group">
+            <label for="insuranceNumberData"></label>
+            <input type="number" class="form-control" id="insuranceNumberData" placeholder="Insurance Number"
+                required />
         </div>
         <div class="col text-center">
-            <button class="btn btn-primary" id="loginButton">Login</button>
-            <p class="error-login" style="color: red"></p>
+            <button class="btn btn-dark">Add</button>
+            <p class="error-add-guide" style="color: red"></p>
         </div>
     </form>
-</section>
 
-<section id="about">
-    <h1 class="text-center">About page</h1>
-</section>
 
-<section id="contacts">
-    <h1 class="text-center">Contacts page</h1>
-</section>
-
-<section id="register" style="display: none">
-    <form class="container col-lg-4 col-sm-8">
-        <h2 class="text-center">Register</h2>
-        <div class="form-group">
-            <label for="registerEmail">Email address</label>
-            <input type="email" class="form-control" id="registerEmail" aria-describedby="emailHelp" required>
-        </div>
-        <div class="form-group">
-            <label for="registerPassword">Password</label>
-            <input type="password" class="form-control" id="registerPassword" required>
-        </div>
-        <div class="form-group">
-            <label for="repeatPassword">Repeat Password</label>
-            <input type="password" class="form-control" id="repeatPassword" required>
-            <p class="error-repeatPassword" style="color: red"></p>
-        </div>
-        <div class="col text-center">
-            <button class="btn btn-primary" id="registerButton">Register</button>
-        </div>
-    </form>
-</section>
-
-<form id="addGuide" class="container col-lg-4 col-sm-8" style="display: none">
-    <h2 class="text-center">Create a Guide</h2>
-    <div class="form-group">
-        <label for="firstNameData"></label>
-        <input type="text" class="form-control" id="firstNameData" placeholder="First Name" required/>
-
+    <div class="container logged-in">
+        <table class="table table-striped table-bordered ">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">Insurance Number</th>
+                    <th scope="col">Delete Person</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
-    <div class="form-group">
-        <label for="lastNameData"></label>
-        <input type="text" class="form-control" id="lastNameData" placeholder="Last Name" required/>
-    </div>
-    <div class="form-group">
-        <label for="insuranceNumberData"></label>
-        <input type="number" class="form-control" id="insuranceNumberData" placeholder="Insurance Number" required/>
-    </div>
-    <div class="col text-center">
-        <button class="btn btn-dark">Add</button>
-        <p class="error-add-guide" style="color: red"></p>
-    </div>
-</form>
 
+    <!-- Notifications-->
+    <div id="success-login"></div>
+    <div id="success-register"></div>
+    <div id='added-success'></div>
+    <div id='delete-success'></div>
+    <div id="signOut-success"></div>
 
-<div class="container logged-in">
-    <table class="table table-striped table-bordered ">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Insurance Number</th>
-            <th scope="col">Delete Person</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-</div>
+    <script>
+        // Your web app's Firebase configuration
+        let firebaseConfig = {
+            apiKey: "AIzaSyAgMgn63pLCK2bHUjNtoKxspncZqPwkPAc",
+            authDomain: "test-c05c4.firebaseapp.com",
+            databaseURL: "https://test-c05c4.firebaseio.com",
+            projectId: "test-c05c4",
+            storageBucket: "test-c05c4.appspot.com",
+            messagingSenderId: "613264734465",
+            appId: "1:613264734465:web:9bec88843beebe42b40300"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
 
-<!-- Notifications-->
-<div id="success-login"></div>
-<div id="success-register"></div>
-<div id='added-success'></div>
-<div id='delete-success'></div>
-<div id="signOut-success"></div>
+        const auth = firebase.auth();
+        const db = firebase.firestore();
 
-<script>
-    // Your web app's Firebase configuration
-    let firebaseConfig = {
-        apiKey: "AIzaSyAgMgn63pLCK2bHUjNtoKxspncZqPwkPAc",
-        authDomain: "test-c05c4.firebaseapp.com",
-        databaseURL: "https://test-c05c4.firebaseio.com",
-        projectId: "test-c05c4",
-        storageBucket: "test-c05c4.appspot.com",
-        messagingSenderId: "613264734465",
-        appId: "1:613264734465:web:9bec88843beebe42b40300"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+    </script>
 
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-</script>
+    <script src="https://nightly.datatables.net/js/jquery.dataTables.js"></script>
+    <script src="https://nightly.datatables.net/js/dataTables.bootstrap4.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
-<script src="https://nightly.datatables.net/js/jquery.dataTables.js"></script>
-<script src="https://nightly.datatables.net/js/dataTables.bootstrap4.js"></script>
-
-<script src="js/index.js"></script>
-<script src="js/auth.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/auth.js"></script>
 
 </body>
 
