--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a class="nav-link logged-in" style="display: none" href="#"></a>
                 </li>
             </ul>
-            <ul class="navbar-nav pull-right">
+            <ul class="navbar-nav pull-right" id="myTab">
                 <li class="nav-item active">
                     <a class="nav-link logged-out" style="display: none" href="#login" id="login-userNav">Login</a>
                 </li>
@@ -221,6 +221,17 @@
         </table>
     </div>
 
+    <footer class="container-fluid">
+        <div class="row">
+            <h2 class="col-lg-10">Copyright © 2020 Nova Capital ™ All Rights Reserved</h2>
+            <div class="col-lg-2 pull-right">
+                <a href="https://github.com/VentsislavKostadinov" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://github.com/VentsislavKostadinov" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/VentsislavKostadinov" target="_blank"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
+
     <!-- Notifications-->
     <div id="success-login"></div>
     <div id="success-register"></div>
@@ -254,6 +265,7 @@
     <script src="https://nightly.datatables.net/js/jquery.dataTables.js"></script>
     <script src="https://nightly.datatables.net/js/dataTables.bootstrap4.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.4.1/dist/simpleParallax.min.js"></script>
+    <script src="https://kit.fontawesome.com/9b583a4a90.js"></script>
     <script src="js/index.js"></script>
     <script src="js/auth.js"></script>
 
