--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
                     <a class="nav-link logged-out" style="display: none" href="#home" id="homeNav">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link logged-out" style="display: none" href="#about" id="aboutNav">About</a>
+                    <a class="nav-link logged-out" style="display: none" href="#developments"
+                        id="developmentsNav">Developments</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link logged-out" style="display: none" href="#contacts" id="contactsNav">Contacts</a>
+                    <a class="nav-link logged-out" style="display: none" href="#about" id="aboutNav">About</a>
                 </li>
+
                 <li class="nav-item active">
                     <a class="nav-link logged-in" style="display: none" href="#"></a>
                 </li>
@@ -156,8 +158,176 @@
         <h1 class="text-center">About page</h1>
     </section>
 
-    <section id="contacts">
-        <h1 class="text-center">Contacts page</h1>
+    <section id="developments">
+
+        <h1 class="text-center"><i>Developments</i></h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-lg-6">
+                                <img src="./images/Iron-House-768x579.jpg" class="card-img img-fluid" alt="dev1">
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">Iron House</h5>
+                                    <h6 class="text">Soho</h6>
+                                    <ul class="list-group">
+                                        <li>Off-Plan of a £770 million large-scale regeneration project changing the
+                                            landscape
+                                            of London</li>
+                                        <li>Iconic destination entrance lobby with 24-hour concierge</li>
+                                        <li>London loft-style collaborative co-working space</li>
+                                    </ul>
+                                    <div class="col text-center"><br />
+                                        <button class="btn btn-primary">Prices from £149.950</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-lg-6">
+                                <img src="./images/churchill-house-768x579.jpg" class="card-img img-fluid" alt="dev2">
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">Chrchill Place</h5>
+                                    <h6>Canary Wharf</h6>
+                                    <ul class="list-group">
+                                        <li><strong>Immediate Gross Rental Yields from 5.1%</strong></li>
+                                        <li>Buy-to-Let Deposit 25%</li>
+                                        <li>Fully-furnished flats (Collection park included)</li>
+                                        <li>High specification finish</li>
+                                    </ul>
+                                    <div class="col text-center"><br />
+                                        <button class="btn btn-primary">Prices from £289.950</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-lg-6">
+                                <img src="./images/thames-valley-768x579.jpg" class="card-img img-fluid" alt="dev3">
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">No.1 Thames Valley<br>South and City</h5>
+                                    <h6>Westminster</h6>
+                                    <ul class="list-group">
+                                        <li>Ultra-modern Open-Plan Executive Suites</li>
+                                        <li>All glass, contemporary development</li>
+                                        <li>Statement entrance and feature canopy</li>
+                                        <li>17% Predicted growth (Knight Frank)</li>
+                                    </ul>
+                                    <div class="col text-center"><br />
+                                        <button class="btn btn-primary">Prices from £369.950</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-lg-6">
+                                <img src="./images/new-elton-house-768x579.jpg" class="card-img img-gluid" alt="dev4">
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">New Elton House<br>Slough</h5>
+                                    <h6 class="cart-text">1 & 2 bedroom flats, Off-Plan, Reaady to rent</h6>
+                                    <ul class="list-group">
+                                        <li><strong>The first and only development designed specifically for Slough's
+                                                Executeive tenants</strong></li>
+                                        <li>Only 58 units avalable</li>
+                                        <li>No.1 place to live and work in the UK</li>
+                                        <li>35% incerease in property prices predicted by 2020 in Slough</li>
+                                        <li>Inital deposit of 10%</li>
+                                    </ul>
+                                    <div class="col text-center"><br />
+                                        <button class="btn btn-primary">Prices from £399.950</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-lg-6">
+                                <img src="./images/madison-house-768x579.jpg" class="card-img img-gluid" alt="dev5">
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">Madison House<br>West end</h5>
+                                    <h6 class="cart-text">2 Bedroom flats</h6>
+                                    <ul class="list-group">
+                                        <li>65 Luxury flats</li>
+                                        <li>100m from West end station</li>
+                                        <li>14.8% propery prices increase expected by 2024</li>
+                                        <li>Anticipated completion date Q4 2020</li>
+                                    </ul>
+                                    <div class="col text-center"><br />
+                                        <button class="btn btn-primary">Prices from £TBC</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-lg-6">
+                                <img src="./images/st-martin-house-768x579.jpg" class="card-img img-gluid" alt="dev6">
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">St. Martin's Place<br>Birmingham City Centre</h5>
+                                    <h6 class="cart-text">3 Bedroom flats</h6>
+                                    <ul class="list-group">
+                                        <li>Prime city centre location></li>
+                                        <li>A-list interior designs by Daniel Gibbons of the Luxe Interiors</li>
+                                        <li>228 exquisitely designed, spacious flats complete with smart features</li>
+                                    </ul>
+                                    <div class="col text-center"><br />
+                                        <button class="btn btn-primary">Prices from $239.950</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
     </section>
 
     <section id="register" style="display: none">
@@ -183,7 +353,7 @@
     </section>
 
     <form id="addGuide" class="container col-lg-4 col-sm-8" style="display: none">
-        <h2 class="text-center">Create a Guide</h2>
+        <h2 class="text-center">Add a new customer</h2>
         <div class="form-group">
             <label for="firstNameData"></label>
             <input type="text" class="form-control" id="firstNameData" placeholder="First Name" required />
@@ -224,8 +394,9 @@
     <footer class="container-fluid">
         <div class="row">
             <h2 class="col-lg-10">Copyright © 2020 Nova Capital ™ All Rights Reserved</h2>
-            <div class="col-lg-2 pull-right">
-                <a href="https://github.com/VentsislavKostadinov" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <div class="col-lg-2" id='icons'>
+                <a href="https://github.com/VentsislavKostadinov" target="_blank"><i
+                        class="fab fa-facebook-square"></i></a>
                 <a href="https://github.com/VentsislavKostadinov" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com/VentsislavKostadinov" target="_blank"><i class="fab fa-github"></i></a>
             </div>
