update delete current row

--- a/index.html
+++ b/index.html
@@ -440,8 +440,9 @@
     <div class="container logged-in">
         <div class="input-group mb-3 col-md-4" style="margin: auto;">
             <label for="searchData"></label>
-            <input class="form-control" id='searchData' type="search" placeholder="Search by First name">
+            <input class="form-control" id='searchData' type="search" placeholder="Search by first or last name">
         </div>
+
         <table class="table table-striped table-bordered ">
             <thead>
                 <tr>
@@ -449,7 +450,7 @@
                     <th scope="col">First Name</th>
                     <th scope="col">Last Name</th>
                     <th scope="col">Insurance Number</th>
-                    <th scope="col">Delete Person</th>
+                    <th scope="col">Delete</th>
                 </tr>
             </thead>
             <tbody>
