--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 </nav>
 
-<section id="home">
+<section id="home" class="logged-out" style="display: none">
     <div class='container-fluid'>
         <div class="row">
             <h1 class='text-center'>ELEGANT<p>CITY LIVING</p>
@@ -71,7 +71,7 @@
     </div>
 </section>
 
-<section id="welcome-nova-capital">
+<section id="welcome-nova-capital" class="logged-out" style="display: none">
     <div class="container-fluid" id='nova-article'>
         <h1>Discover your new home</h1>
         <div class="row">
@@ -109,7 +109,7 @@
 </section>
 
 <!--GOOGLE MAPS LOCATION-->
-<section id="location">
+<section id="location" class="logged-out" style="display: none">
     <div class="container-fluid">
         <h1 class="h1 text-center">OUR LOCATION</h1><br/><br/>
         <div class="row">
@@ -189,7 +189,7 @@
     </form>
 </section>
 
-<section id="developments">
+<section id="developments" >
     <h1 class="text-center"><i>Developments</i></h1>
     <div class="container-fluid">
         <div class="row">
@@ -476,7 +476,7 @@
     </table>
 </div>
 
-<footer class="container-fluid">
+<footer class="container-fluid logged-out" style="display:none;">
     <div class="row">
         <h2 class="col-lg-10">Copyright © 2020 Nova Capital ™ All Rights Reserved</h2>
         <div class="col-lg-2" id='icons'>
