--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 <script>
     // simpleparallax.js
     const images = $('.img-fluid');
-    new simpleParallax(images[0], {orientation: 'right'});
+    new simpleParallax(images[0], {scale: 1.6});
     new simpleParallax(images[1], {orientation: 'right'});
     new simpleParallax(images[2], {orientation: 'left'});
 </script>
